# safety-drift-bench

./: .gitignore  README.md  pyproject.toml
analysis/: plot_results.py  report_plot.py
builders/: adversaries.py  trajectory_builder.py
configs/: apple_rule.yaml  apple_rule_quick.yaml  apple_rule_smoke.yaml  factorial.yaml  factorial_smoke.yaml  judges.yaml
data/prompts/: benign_questions.txt  probe_questions.txt
interventions/: reground.py
metrics/: agreement.py  hazard.py  summary.py
models/: client.py
scoring/: hard_constraint.py  llm_judge.py
scripts/: run_experiment.py  run_factorial.py  score_transcripts.py
tests/: test_adversaries.py  test_agreement.py  test_builder.py  test_llm_judge.py  test_metrics.py  test_scoring.py
